Closed
Bug 1252347
Opened 10 years ago
Closed 10 years ago
Unable to access NAB internet banking with e10s enabled
Categories
(Core :: General, defect)
Tracking
()
RESOLVED
FIXED
mozilla47
| Tracking | Status | |
|---|---|---|
| firefox47 | --- | fixed |
People
(Reporter: rfkelly, Assigned: jfkthame)
References
Details
(Keywords: regression)
Attachments
(2 files)
|
395.76 KB,
image/png
|
Details | |
|
3.44 KB,
patch
|
emk
:
review+
|
Details | Diff | Splinter Review |
STR:
1. Visit http://www.nab.com.au/ in Nightly with e10s enabled
2. Choose "Login" -> "Internet Banking" as in attached screenshot
Expected result:
Internet banking interface opens in a pop-up window. This works fine when e10s is disabled.
Actual result:
The pop-up window appears but contains "about:blank". There's an error logged in the web developer console saying "NS_ERROR_NOT_IMPLEMENTED" with the following (unhelpfully minified) traceback:
NS_ERROR_NOT_IMPLEMENTED:
h()
clientlibs.c8b943fd430d1554ffdc2db3a269ecb6.js:2
i()
clientlibs.c8b943fd430d1554ffdc2db3a269ecb6.js:2
n.event.dispatch()
clientlibs-jquery.0c2b6a372f7128c8eb6c46c2fe7b5dd2.js:3
n.event.add/r.handle()
clientlibs-jquery.0c2b6a372f7128c8eb6c46c2fe7b5dd2.js:3
clientlibs.c8b943fd430d1554ffdc2db3a269ecb6.js:2:0
Updated•10 years ago
|
Flags: needinfo?(miket)
Comment 1•10 years ago
|
||
I bisected this down to https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=09b52ee5396030d49e946114c2cb7507645b8c96&tochange=9feea2de5e1d4c39d2f1d0a69b77a493fa09c4a0, which seems a little odd.
Jonathan, any reason spring to mind why NS_ERROR_NOT_IMPLEMENTED would be thrown here, if your changeset is indeed related?
Flags: needinfo?(miket) → needinfo?(jkew)
Comment 2•10 years ago
|
||
We were thinking this was tied to the now deprecated showModalDialog api.
Comment 3•10 years ago
|
||
I thought that too -- but I don't see them using showModalDialog on their site (searching both from our debugger and Chrome DevTools).
Comment 4•10 years ago
|
||
If you open the URL directly (https://ib.nab.com.au/nabib/index.jsp), you still get about:blank. Here's some funky code from https://ib.nab.com.au/nabib/scripts/general.js?id=027:
//If the user has attempted to open a new window from within the IB app (eg. CTRL-N), load a blank page instead of loading IB
// PD - Special handling of Safari which does not set the window.name properly
isSafari = (navigator.appVersion.indexOf("Safari")!=-1);
if (!isSafari)
{
if (window.name == "") {window.location="about:blank"}
}
Comment 5•10 years ago
|
||
In a debug e10s build:
[Child 59726] ###!!! ASSERTION: implement me!: 'false', file /Users/miket/dev/git-gecko/embedding/browser/nsDocShellTreeOwner.cpp, line 578
JavaScript error: http://www.nab.com.au/etc/designs/nabrwd/clientlibs.c8b943fd430d1554ffdc2db3a269ecb6.js, line 2: NS_ERROR_NOT_IMPLEMENTED:
Blocks: 1247335
| Assignee | ||
Comment 6•10 years ago
|
||
Clearly a regression from 1247335; we need an actual implementation of that method.
| Assignee | ||
Comment 7•10 years ago
|
||
This should fix the issue here; the internet banking window now opens as expected. I suspect the implementation in nsWebBrowser may not be fully correct (I've left a comment there), but it's not clear whether this can be a problem in actual practice. In any case, it should be no worse than before, as we've always been depending on device-pixel coords here, so if they're ambiguous, there's a potential glitch.
Attachment #8725599 -
Flags: review?(VYV03354)
Updated•10 years ago
|
Attachment #8725599 -
Flags: review?(VYV03354) → review+
| Assignee | ||
Comment 8•10 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/3bff8885288e8bf55f012569cfc34305fb3c419c
Bug 1252347 - Provide missing implementations of nsIBaseWindow::SetPositionDesktopPix. r=emk
Comment 9•10 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
| Reporter | ||
Comment 10•10 years ago
|
||
Confirmed fixed for me in today's Nightly, thanks for the speedy response here everyone!
Comment 11•8 years ago
|
||
Moving from Core::Untriaged to Core::General https://bugzilla.mozilla.org/show_bug.cgi?id=1407598
Component: Untriaged → General
You need to log in
before you can comment on or make changes to this bug.
Description
•