Bug 1252347 - Provide missing implementations of nsIBaseWindow::SetPositionDesktopPix. r=emk